--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -18,6 +18,15 @@
                 {{"<!-- main nav -->" | safeHTML}}
                 {{ if .IsHome }}
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+                        <ul class="navbar-nav mr-auto navigation-menu">
+                                {{ range $.Site.Home.AllTranslations }}
+                                <li class="nav-item">
+                                        <a class="nav-link" href="{{ .Permalink }}">{{ .Language.LanguageName }}</a>
+                                </li>
+                                {{ end }}
+                        </ul>
+
                         <ul class="navbar-nav ml-auto navigation-menu">
                                 <li class="nav-item"><a class="nav-link" data-scroll href="#body">{{ with $.Site.Params.home }}{{ . }}{{ end }}</a></li>
                                 {{ range $.Site.Menus.nav }}
