--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,10 @@ pre {
   color: #afbac4;
 }
 
+.carousel-caption {
+  background-color: rgba(25,25,25,0.25);
+}
+
 /*=================================================================
   Basic Setup
 ==================================================================*/
