Extracted Projects simple carousel as a partial.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,7 @@ pre {
 }
 
 .carousel-caption {
-  background-color: rgba(25,25,25,0.25);
+  background-color: rgba(15, 15, 15, 0.45);
 }
 
 /*=================================================================
