Improvements in transaltion per page in navbar, + added i18n approach into a partial

--- a/layouts/partials/hero-area.html
+++ b/layouts/partials/hero-area.html
@@ -8,19 +8,12 @@
         </div>
         {{ end }}
 
-        {{ with .Site.Params.banner.heading }}
-        {{ with i18n . }} <h1>{{ . }}</h1> {{ else }} <h1>{{ . }}</h1> {{ end }}
-        {{ end }}
-
-        {{ with .Site.Params.banner.content }}
-        {{ with i18n . }} <p>{{ . }}</p> {{ else }} <p>{{ . }}</p> {{ end }}
-        {{ end }}
+        <h1>{{ partial "i18n_if_exists" (dict "val" .Site.Params.banner.heading) }}</h1>
+        <p>{{ partial "i18n_if_exists" (dict "val" .Site.Params.banner.content) }}</p>
 
         {{ if .Site.Params.banner.btn}}
         <a data-scroll href="{{ .Site.Params.banner.btnURL}}" class="btn btn-transparent">
-            {{ with .Site.Params.banner.btnText }}
-            {{ with i18n . }} {{ . }} {{ else }} {{ . }} {{ end }}
-            {{ end }}
+            {{ partial "i18n_if_exists" (dict "val" .Site.Params.banner.btnText) }}
         </a>
         {{ end }}
     </div>
