--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -19,13 +19,7 @@
                 {{ if .IsHome }}
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-                        <ul class="navbar-nav mr-auto navigation-menu">
-                                {{ range $.Site.Home.AllTranslations }}
-                                <li class="nav-item">
-                                        <a class="nav-link" href="{{ .Permalink }}">{{ .Language.LanguageName }}</a>
-                                </li>
-                                {{ end }}
-                        </ul>
+                        {{ partial "translations-navlist.html" . }}
 
                         <ul class="navbar-nav ml-auto navigation-menu">
                                 <li class="nav-item"><a class="nav-link" data-scroll href="#body">{{ with $.Site.Params.home }}{{ . }}{{ end }}</a></li>
@@ -36,6 +30,9 @@
                 </div>
                 {{ else }}
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+                        {{ partial "translations-navlist.html" . }}
+
                         <ul class="navbar-nav ml-auto navigation-menu">
                                 <li class="nav-item"><a class="nav-link" data-scroll href="{{ $.Site.BaseURL }}#body">{{ with $.Site.Params.home }}{{ . }}{{ end }}</a></li>
                                 {{ range $.Site.Menus.nav }}
