--- a/layouts/project/single.html
+++ b/layouts/project/single.html
@@ -27,9 +27,13 @@
             </div>
 
             <div class="col-lg-8 offset-lg-2">
-                {{ .description }}
+                <h3>{{ i18n "description" }}: </h3>
+                <p>{{ .description }}</p>
 
+                {{ if ( gt (len .images) 0 ) }}
+                <h3>{{ i18n "gallery" }}: </h3>
                 {{ partial "carousel_simple" (dict "id" "project-carousel"  "images" .images) }}
+                {{ end }}
             </div>
 
         </div>
