Small improvement, provide more space to portfolio project caption card.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,7 @@ pre {
   color: #afbac4;
 }
 
+
 .carousel-caption {
   background-color: rgba(15, 15, 15, 0.45);
 }
@@ -55,6 +56,10 @@ pre {
   -moz-border-radius: 6px;
   -webkit-border-radius: 6px;
   border: 0 solid #000000;
+}
+
+.portfolio-block .caption {
+  width: 85%;
 }
 
 /*=================================================================
