--- a/layouts/partials/portfolio.html
+++ b/layouts/partials/portfolio.html
@@ -11,11 +11,11 @@
 				<div class="title text-center">
 					<h2>
                         {{ with .title }}
-                        {{ partial "i18n_if_exists" (dict "val" index (split . " ") 0) }}
+                        {{ partial "i18n_if_exists" (dict "val" (index (split . " ") 0)) }}
                         {{ end }}
                         <span class="color">
 							{{ with .title }}
-                            {{ partial "i18n_if_exists" (dict "val" index (split . " ") 1) }}
+                            {{ partial "i18n_if_exists" (dict "val" (index (split . " ") 1)) }}
                             {{ end }}
                         </span>
                     </h2>
@@ -66,7 +66,7 @@
 						<h4 class="mt-3"><a href="{{ $theUrl }}">
                             {{ partial "i18n_if_exists" (dict "val" .title) }}
                         </a></h4>
-						<p>{{ partial "i18n_if_exists" (dict "val" .description) }}</p>
+						<p>{{ partial "i18n_if_exists" (dict "val" .content) }}</p>
 					</div>
 				</div>
 			</div>
